# drf-project

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
materials/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_lesson_link_video.py  0003_course_owner_lesson_owner.py  0004_subscription.py  0005_subscription_subscription.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: fill_pay.py
users/migrations/: 0001_initial.py  0002_pay.py  0003_pay_link.py
