[tool.poetry]
name = "drf-project"
version = "0.1.0"
description = ""
authors = ["ika <mamina747@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
black = "^24.10.0"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
u = "^0.1"
drf-yasg = "^1.21.8"
stripe = "^11.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
